run_pop_kube_frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: run-pop-frontend
  namespace: run-pop
spec:
  selector:
    matchLabels:
      app: run-pop-frontend
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: run-pop-frontend
    spec:
      nodeSelector:
        nodeCategory: worker
      containers:
        - name: run-pop-frontend
          image: milsman2/run_pop
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
