run_pop_kube_frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: run-pop-frontend
  namespace: run-pop
spec:
  type: ClusterIP
  selector:
    app: run-pop-frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
