run_pop_kube_frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: run-pop-frontend-ingress
  namespace: run-pop
  annotations:
    cert-manager.io/cluster-issuer: 'prod-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - runpop.kanebroslab.com
    secretName: run-pop-frontend
  rules:
  - host: runpop.kanebroslab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: run-pop-frontend
            port:
              number: 3000
